fix: Note overflow

--- a/src/components/Disc/disc.css
+++ b/src/components/Disc/disc.css
@@ -34,6 +34,7 @@
   position: relative;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .clef-disc__note {
